--- a/css/forca.css
+++ b/css/forca.css
@@ -53,3 +53,102 @@ body {
     margin-top: 30px;
     
 }
+
+.teclas button {
+    width: 24px;
+    height: 24px;
+    margin: 2px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    box-shadow: 0px 2px 8px dimgray;
+    border-radius: 5px;
+    border: 1px solid dimgray;
+    color: #8b008b;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 900;
+}
+
+.teclas button:hover {
+    transform: scale(1.3);
+}
+
+#categoria {
+    margin-top: 30px;
+    color: #8b008b;
+    font-size: 1.2em;
+}
+
+@media (min-width: 321px) {
+    .teclas button {
+        width: 25px;
+        height: 25px;
+    }
+
+    #categoria {
+       
+        font-size: 1.3em;
+    }
+}
+
+@media (min-width: 376px) {
+    .teclas button {
+        width: 30px;
+        height: 30px;
+    }
+    #palavra-secreta {
+        
+        font-size: 1.3em;
+        
+    }
+    .letras {
+        
+        width: 18px;
+           
+    }
+
+    #categoria {
+       
+        font-size: 1.5em;
+    }
+}
+
+@media (min-width: 426px) {
+    .teclas button {
+        width: 36px;
+        height: 36px;
+    }
+    #palavra-secreta {
+        
+        font-size: 1.5em;        
+    }
+    .letras {
+        
+        width: 20px;           
+    }
+
+    #categoria {
+       
+        font-size: 1.6em;
+    }
+}
+
+@media (min-width: 769px) {
+    .teclas button {
+        width: 68px;
+        height: 68px;
+        font-size: 2em;
+    }
+    #palavra-secreta {
+        
+        font-size: 2.5em;        
+    }
+    .letras {
+        
+        width: 35px;           
+    }
+
+    #categoria {
+       
+        font-size: 2em;
+    }
+}
